--- a/StoreBook/Web.config
+++ b/StoreBook/Web.config
@@ -42,11 +42,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -57,10 +57,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="SachOnlineEntities" connectionString="metadata=res://*/Models.SachOnline.csdl|res://*/Models.SachOnline.ssdl|res://*/Models.SachOnline.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-OBOPR7PM\SQLEXPRESS;initial catalog=SachOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="SachOnlineConnectionString" connectionString="Data Source=LAPTOP-OBOPR7PM\SQLEXPRESS;Initial Catalog=SachOnline;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />
+    <add name="SachOnlineEntities" connectionString="metadata=res://*/Models.SachOnline.csdl|res://*/Models.SachOnline.ssdl|res://*/Models.SachOnline.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-OBOPR7PM\SQLEXPRESS;initial catalog=SachOnline;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SachOnlineConnectionString" connectionString="Data Source=LAPTOP-OBOPR7PM\SQLEXPRESS;Initial Catalog=SachOnline;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
